v1.0
#Change Log:
-init: initial commit
-docs: added change_log
-chore: updated .gitignore
-feat!: added core features, including repository list and details after the medical emergencies.
-BREAKING CHANGE: repository list with offline browsing support
-BREAKING CHANGE: repository details with offline browsing support
-BREAKING CHANGE: added sorting options by either last update date time or star count
-BREAKING CHANGE: Selected sorting option persists in further app sessions
-fix: updated keyboardOptions for search
-feat: search functionality by keyboardActions done
-update: increase the item height on the repository list page
-update: new drawable for the launcher page
-feat: add launcher icon
-fix: add spaces on the app name
-feat: add custom font support
-docs: added README.md
-docs: updated README.md